[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/blur.gdshader" type="Shader" id=1]
[ext_resource path="res://Assets/Fonts/FRUIT-PUNCH.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Button/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/white.png" type="Texture" id=4]
[ext_resource path="res://UI/MainTheme.tres" type="Theme" id=5]
[ext_resource path="res://UI/SettingsMenu.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.862745 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0.533333, 0.533333, 0.533333, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 70
outline_size = 5
outline_color = Color( 0.505882, 0.505882, 0.505882, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/Blur:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 0.6, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 0.2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 600 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/Blur:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1.2 ),
"update": 3,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="SettingsMenu" type="CanvasLayer"]
layer = 28
script = ExtResource( 6 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 197.0
margin_top = 100.0
margin_right = 827.0
margin_bottom = 500.0
rect_min_size = Vector2( 630, 400 )
rect_pivot_offset = Vector2( -974.735, -592.24 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="TextureRect" parent="CenterContainer/Panel"]
show_behind_parent = true
material = SubResource( 2 )
margin_left = -195.0
margin_top = -900.0
margin_right = 829.0
margin_bottom = 500.0
rect_min_size = Vector2( 1024, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tip" type="Label" parent="CenterContainer/Panel"]
modulate = Color( 1, 1, 1, 0.745098 )
margin_left = -195.0
margin_top = 438.0
margin_right = 826.0
margin_bottom = 460.0
theme = ExtResource( 5 )
text = "TIP: press \"Ctrl+O\" to bring up the settings menu too!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CenterContainer/Panel"]
margin_left = 22.0
margin_top = 53.0
margin_right = 609.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 3 )
text = "Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoneButton" parent="CenterContainer/Panel" instance=ExtResource( 3 )]
margin_left = 237.241
margin_top = 274.874
margin_right = 388.241
margin_bottom = 343.874
rect_pivot_offset = Vector2( -150.582, -308.97 )
text = "Done"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
margin_left = 120.0
margin_top = 144.0
margin_right = 517.0
margin_bottom = 228.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolume" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 397.0
margin_bottom = 22.0
hint_tooltip = "The scroll speed of the camera at the start of the game"
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/MasterVolume"]
margin_right = 119.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Master volume"

[node name="Slider" type="HSlider" parent="CenterContainer/Panel/VBoxContainer/MasterVolume"]
margin_left = 287.0
margin_right = 397.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -45.0
max_value = 0.0
step = 2.0

[node name="TouchControls" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 26.0
margin_right = 397.0
margin_bottom = 58.0
hint_tooltip = "The scroll speed of the camera at the start of the game"
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/TouchControls"]
margin_right = 119.0
margin_bottom = 32.0
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Touch controls"
valign = 1

[node name="CheckButton" type="CheckButton" parent="CenterContainer/Panel/VBoxContainer/TouchControls"]
margin_left = 333.0
margin_right = 397.0
margin_bottom = 32.0
size_flags_horizontal = 10

[node name="TouchControlsScale" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 62.0
margin_right = 397.0
margin_bottom = 84.0
hint_tooltip = "The scroll speed of the camera at the start of the game"
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/TouchControlsScale"]
margin_right = 166.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Touch controls scale"
valign = 1

[node name="Slider" type="HSlider" parent="CenterContainer/Panel/VBoxContainer/TouchControlsScale"]
margin_left = 287.0
margin_right = 397.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 0.4
max_value = 1.0
step = 0.1
value = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer"]
autoplay = "in"
anims/in = SubResource( 4 )
anims/out = SubResource( 5 )
